Basic home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
     <string name="bpm">bpm</string>
     <string name="ug_m3">µg/m3</string>
+
+    <string name="home">HOME</string>
+    <string name="settings">SETTINGS</string>
 </resources>
