--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="home">HOME</string>
     <string name="settings">SETTINGS</string>
+    <string name="dashboard">DASHBOARD</string>
 </resources>
