--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,15 +2,15 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
-    <string name="respiratory_rate">RESPIRATORY RATE:</string>
+    <string name="respiratory_rate">FRECUENCIA RESPIRATORIA:</string>
     <string name="pm10">PM10:</string>
     <string name="pm2_5">PM2.5:</string>
 
     <string name="bpm">bpm</string>
     <string name="ug_m3">µg/m3</string>
 
-    <string name="home">HOME</string>
-    <string name="dashboard">DASHBOARD</string>
-    <string name="settings">SETTINGS</string>
+    <string name="home">INICIO</string>
+    <string name="dashboard">TABLERO</string>
+    <string name="settings">AJUSTES</string>
 
 </resources>
