--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,11 +6,15 @@
     <string name="pm10">PM10:</string>
     <string name="pm2_5">PM2.5:</string>
 
-    <string name="bpm">bpm</string>
+    <string name="bpm">resp/min</string>
     <string name="ug_m3">µg/m3</string>
 
-    <string name="home">INICIO</string>
-    <string name="dashboard">TABLERO</string>
-    <string name="settings">AJUSTES</string>
+    <string name="menu_home">INICIO</string>
+    <string name="menu_dashboard">TABLERO</string>
+    <string name="menu_settings">AJUSTES</string>
+
+    <string name="action_settings">Ajustes</string>
+    <string name="action_air_speck">AirSpeck</string>
+    <string name="action_re_speck">RESpeck</string>
 
 </resources>
