--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,18 +2,18 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
-    <string name="respiratory_rate">RESPIRATORY RATE:</string>
+    <string name="respiratory_rate">呼吸频率:</string>
     <string name="pm10">PM10:</string>
     <string name="pm2_5">PM2.5:</string>
 
     <string name="bpm">bpm</string>
     <string name="ug_m3">µg/m3</string>
 
-    <string name="menu_home">HOME</string>
-    <string name="menu_dashboard">DASHBOARD</string>
-    <string name="menu_settings">SETTINGS</string>
+    <string name="menu_home">首页</string>
+    <string name="menu_dashboard">仪表板</string>
+    <string name="menu_settings">设置的</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置的</string>
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
 
