Reading View added. Layout modified. Dummy activities for AirSpeck and RESpeck added.

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,16 +2,16 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
-    <string name="respiratory_rate">呼吸频率:</string>
-    <string name="pm10">PM10:</string>
-    <string name="pm2_5">PM2.5:</string>
+    <string name="respiratory_rate">呼吸频率</string>
+    <string name="pm10">PM10</string>
+    <string name="pm2_5">PM2.5</string>
 
     <string name="bpm">bpm</string>
     <string name="ug_m3">µg/m3</string>
 
     <string name="menu_home">首页</string>
     <string name="menu_dashboard">仪表板</string>
-    <string name="menu_settings">设置的</string>
+    <string name="menu_settings">设置</string>
 
     <string name="action_settings">设置的</string>
     <string name="action_air_speck">AirSpeck</string>
