--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,9 +2,9 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
-    <string name="respiratory_rate">FRECUENCIA RESPIRATORIA:</string>
-    <string name="pm10">PM10:</string>
-    <string name="pm2_5">PM2.5:</string>
+    <string name="respiratory_rate">FRECUENCIA RESPIRATORIA</string>
+    <string name="pm10">PM10</string>
+    <string name="pm2_5">PM2.5</string>
 
     <string name="bpm">resp/min</string>
     <string name="ug_m3">µg/m3</string>
