--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -7,7 +7,7 @@
     <string name="pm2_5">PM2.5</string>
 
     <string name="bpm">bpm</string>
-    <string name="ug_m3">µg/m3</string>
+    <string name="ug_m3">µg/m³</string>
 
     <string name="menu_home">首页</string>
     <string name="menu_dashboard">仪表板</string>
