--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="pm2_5">PM2.5</string>
 
     <string name="bpm">bpm</string>
-    <string name="ug_m3">µg/m3</string>
+    <string name="ug_m3">µg/m³</string>
 
     <string name="menu_home">HOME</string>
     <string name="menu_dashboard">DASHBOARD</string>
@@ -16,5 +16,90 @@
     <string name="action_settings">Settings</string>
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
+    <string name="title_activity_settings">Settings</string>
+
+
+    <!-- Strings related to Settings -->
+
+    <!-- Personal Data settings -->
+    <string name="pref_header_personal_data">Personal Data</string>
+
+    <string name="pref_title_display_name">Name</string>
+    <string name="pref_default_display_name">John Doe</string>
+
+    <string name="pref_title_birth_date">Birth Date</string>
+    <string name="pref_default_birth_date">1991.01.01</string>
+
+    <string name="pref_title_gender">Gender</string>
+    <string-array name="pref_gender_list">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string-array name="pref_gender_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_region">Region</string>
+    <string-array name="pref_region_list">
+        <item>Africa</item>
+        <item>Asia</item>
+        <item>Europe</item>
+        <item>Latin America</item>
+        <item>North America</item>
+    </string-array>
+    <string-array name="pref_region_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+
+    <!-- Example settings for User Interface -->
+    <string name="pref_header_ui">User Interface</string>
+
+    <string name="pref_title_main_screen">Main Screen Readings</string>
+    <string-array name="pref_main_screen_list">
+        <item>List</item>
+        <item>Sequential</item>
+    </string-array>
+    <string-array name="pref_main_screen_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+
+    <string name="pref_title_airspeck_app_access">Enable AirSpeck App</string>
+    <string name="pref_description_airspeck_app_access">Access to AirSpeck App</string>
+
+    <string name="pref_title_respeck_app_access">Enable RESpeck App</string>
+    <string name="pref_description_respeck_app_access">Access to RESpeck App
+    </string>
+
+
+
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
 
 </resources>
