--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,19 +2,114 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
-    <string name="respiratory_rate">FRECUENCIA RESPIRATORIA</string>
-    <string name="pm10">PM10</string>
-    <string name="pm2_5">PM2.5</string>
+    <!-- Strings related to Readings -->
 
-    <string name="bpm">resp/min</string>
-    <string name="ug_m3">µg/m³</string>
+    <!-- Readings -->
+    <string name="reading_respiratory_rate">FRECUENCIA RESPIRATORIA</string>
+    <string name="reading_pm10">PM 10</string>
+    <string name="reading_pm2_5">PM 2.5</string>
 
+    <!-- Reading units -->
+    <string name="reading_unit_bpm">resp/min</string>
+    <string name="reading_unit_ug_m3">µg/m³</string>
+
+
+    <!-- Strings related to Menus -->
+
+    <!-- Button/tabs menu -->
     <string name="menu_home">INICIO</string>
+    <string name="menu_health">SALUD</string>
+    <string name="menu_air">AIRE</string>
     <string name="menu_dashboard">TABLERO</string>
     <string name="menu_settings">AJUSTES</string>
 
-    <string name="action_settings">Ajustes</string>
+    <!-- Action Bar menu -->
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
+    <string name="action_settings">Ajustes</string>
+
+
+    <!-- Strings related to Settings -->
+    <string name="title_activity_settings">Ajustes</string>
+
+    <!-- Personal Data settings -->
+    <string name="pref_header_personal_data">Datos personales</string>
+
+    <string name="pref_title_display_name">Nombre</string>
+    <string name="pref_default_display_name">Usuario</string>
+
+    <string name="pref_title_birth_date">Fecha de nacimiento</string>
+    <string name="pref_default_birth_date">1991.01.01</string>
+
+    <string name="pref_title_gender">Género</string>
+    <string-array name="pref_gender_list">
+        <item>Masculino</item>
+        <item>Female</item>
+    </string-array>
+    <string-array name="pref_gender_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_region">Región</string>
+    <string-array name="pref_region_list">
+        <item>Africa</item>
+        <item>Asia</item>
+        <item>Europe</item>
+        <item>Latin America</item>
+        <item>North America</item>
+    </string-array>
+    <string-array name="pref_region_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+
+    <!-- Example settings for User Interface -->
+    <string name="pref_header_ui">Interfaz de usuario</string>
+
+    <string name="pref_title_main_screen_readings_display_mode">Modo de visualización lecturas</string>
+    <string-array name="pref_home_screen_readings_display_mode_list">
+        <item>Listado</item>
+        <item>Cíclico</item>
+    </string-array>
+    <string-array name="pref_home_screen_readings_display_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_main_menu_layout">Diseño del menú principal</string>
+    <string name="pref_description_main_menu_layout">Elegir entre botones y pestañas</string>
+
+    <string name="pref_title_airspeck_app_access">Acceso a AirSpeck</string>
+    <string name="pref_description_airspeck_app_access">Habilitar AirSpeck App</string>
+
+    <string name="pref_title_respeck_app_access">Acceso a RESpeck</string>
+    <string name="pref_description_respeck_app_access">Habilitar RESpeck App</string>
+
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Datos &amp; sincronización</string>
+
+    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
 
 </resources>
