--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -32,7 +32,7 @@
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">设置的</string>
 
-    <!-- Personal Data settings -->
+    <!-- Personal Data vec_settings -->
     <string name="pref_header_personal_data">个人资料</string>
 
     <string name="pref_title_display_name">名称</string>
@@ -68,7 +68,7 @@
     </string-array>
 
 
-    <!-- Example settings for User Interface -->
+    <!-- Example vec_settings for User Interface -->
     <string name="pref_header_ui">用户界面</string>
 
     <string name="pref_title_main_screen_readings_display_mode">读数显示模式</string>
@@ -81,7 +81,7 @@
         <item>1</item>
     </string-array>
 
-    <string name="pref_title_main_menu_layout">主菜单布局</string>
+    <string name="pref_title_main_menu_layout">先进的主菜单布局</string>
     <string name="pref_description_main_menu_layout">按钮和标签之间进行选择</string>
 
     <string name="pref_title_airspeck_app_access">AirSpeck 访问</string>
@@ -91,7 +91,7 @@
     <string name="pref_description_respeck_app_access">启用 RESpeck 应用</string>
 
 
-    <!-- Example settings for Data & Sync -->
+    <!-- Example vec_settings for Data & Sync -->
     <string name="pref_header_data_sync">数据与同步</string>
 
     <string name="pref_title_sync_frequency">同步频率</string>
@@ -111,5 +111,6 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
+    <string name="readings_title">实时数据</string>
 
 </resources>
