--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -10,6 +10,13 @@
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
 
+    <string name="reading_pm1_0">PM 1.0</string>
+    <string name="reading_temp">तापमान</string>
+    <string name="reading_rel_humidity">नमी</string>
+    <string name="reading_o3">O3</string>
+    <string name="reading_no2">NO2</string>
+    <string name="reading_bins">Bins</string>
+
     <!-- Reading units -->
     <string name="reading_unit_bpm">bpm</string>
     <string name="reading_unit_ug_m3">µg/m³</string>
@@ -20,7 +27,7 @@
     <!-- Button/tabs menu -->
     <string name="menu_home">घर</string>
     <string name="menu_health">स्वास्थ्य</string>
-    <string name="menu_air">हवा</string>
+    <string name="menu_air_quality">हवा की गुणवत्ता</string>
     <string name="menu_dashboard">डैशबोर्ड</string>
     <string name="menu_settings">सेटिंग्स</string>
 
@@ -30,10 +37,15 @@
     <string name="action_settings">सेटिंग्स</string>
 
 
+    <!-- Strings related to AirSpeck and RESpeck apps -->
+    <string name="airspeck_not_found">AirSpeck एप्लिकेशन नहीं मिला</string>
+    <string name="respeck_not_found">RESpeck एप्लिकेशन नहीं मिला</string>
+
+
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">सेटिंग्स</string>
 
-    <!-- Personal Data vec_settings -->
+    <!-- Personal Data settings -->
     <string name="pref_header_personal_data">व्यक्तिगत डेटा</string>
 
     <string name="pref_title_display_name">नाम</string>
@@ -69,11 +81,40 @@
     </string-array>
 
 
-    <!-- Example vec_settings for User Interface -->
+    <!-- Example settings for User Interface -->
     <string name="pref_header_ui">प्रयोक्ता इंटरफ़ेस</string>
+
+    <string name="pref_category_ui_general">सामान्य</string>
+
+    <string name="pref_title_font_size">फ़ॉन्ट आकार</string>
+    <string-array name="pref_font_size_list">
+        <item>छोटा</item>
+        <item>साधारण</item>
+        <item>बड़ा</item>
+        <item>विशाल</item>
+    </string-array>
+    <string-array name="pref_font_size_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string name="pref_title_readings_display_mode">रीडिंग प्रदर्शन मोड</string>
+    <string-array name="pref_readings_display_mode_list">
+        <item>सूची</item>
+        <item>चित्रात्मक</item>
+    </string-array>
+    <string-array name="pref_readings_display_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 
     <string name="pref_title_main_menu_layout">उन्नत मुख्य मेनू लेआउट</string>
     <string name="pref_description_main_menu_layout">बटन और टैब के बीच चुनें</string>
+
+    <string name="pref_title_icons_in_tabs">Enable icons</string>
+    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
 
     <string name="pref_title_airspeck_app_access">AirSpeck पहुँच</string>
     <string name="pref_description_airspeck_app_access">AirSpeck ऐप्स सक्षम</string>
@@ -81,18 +122,8 @@
     <string name="pref_title_respeck_app_access">RESpeck पहुँच</string>
     <string name="pref_description_respeck_app_access">RESpeck ऐप्स सक्षम</string>
 
-    <string name="pref_title_main_screen_readings_display_mode">रीडिंग प्रदर्शन मोड</string>
-    <string-array name="pref_home_screen_readings_display_mode_list">
-        <item>सूची</item>
-        <item>चक्रीय</item>
-    </string-array>
-    <string-array name="pref_home_screen_readings_display_mode_list_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
 
-
-    <!-- Example vec_settings for Data & Sync -->
+    <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">डेटा और सिंक</string>
 
     <string name="pref_title_sync_frequency">सिंक आवृत्ति</string>
