--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,6 +9,13 @@
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
 
+    <string name="reading_pm1_0">PM 1.0</string>
+    <string name="reading_temp">温度</string>
+    <string name="reading_rel_humidity">湿度</string>
+    <string name="reading_o3">O3</string>
+    <string name="reading_no2">NO2</string>
+    <string name="reading_bins">Bins</string>
+
     <!-- Reading units -->
     <string name="reading_unit_bpm">bpm</string>
     <string name="reading_unit_ug_m3">µg/m³</string>
@@ -19,7 +26,7 @@
     <!-- Button/tabs menu -->
     <string name="menu_home">首页</string>
     <string name="menu_health">健康</string>
-    <string name="menu_air">空气</string>
+    <string name="menu_air_quality">空气质量</string>
     <string name="menu_dashboard">仪表板</string>
     <string name="menu_settings">设置</string>
 
@@ -29,10 +36,15 @@
     <string name="action_settings">设置的</string>
 
 
+    <!-- Strings related to AirSpeck and RESpeck apps -->
+    <string name="airspeck_not_found">AirSpeck 应用程序未找到</string>
+    <string name="respeck_not_found">RESpeck 应用程序未找到</string>
+
+
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">设置的</string>
 
-    <!-- Personal Data vec_settings -->
+    <!-- Personal Data settings -->
     <string name="pref_header_personal_data">个人资料</string>
 
     <string name="pref_title_display_name">名称</string>
@@ -68,21 +80,40 @@
     </string-array>
 
 
-    <!-- Example vec_settings for User Interface -->
+    <!-- Example settings for User Interface -->
     <string name="pref_header_ui">用户界面</string>
 
-    <string name="pref_title_main_screen_readings_display_mode">读数显示模式</string>
-    <string-array name="pref_home_screen_readings_display_mode_list">
-        <item>名单</item>
-        <item>循环</item>
+    <string name="pref_category_ui_general">一般</string>
+
+    <string name="pref_title_font_size">字体大小</string>
+    <string-array name="pref_font_size_list">
+        <item>小</item>
+        <item>正常</item>
+        <item>大</item>
+        <item>巨大</item>
     </string-array>
-    <string-array name="pref_home_screen_readings_display_mode_list_values">
+    <string-array name="pref_font_size_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string name="pref_title_readings_display_mode">读数显示模式</string>
+    <string-array name="pref_readings_display_mode_list">
+        <item>名单</item>
+        <item>图形</item>
+    </string-array>
+    <string-array name="pref_readings_display_mode_list_values">
         <item>0</item>
         <item>1</item>
     </string-array>
 
     <string name="pref_title_main_menu_layout">先进的主菜单布局</string>
     <string name="pref_description_main_menu_layout">按钮和标签之间进行选择</string>
+
+    <string name="pref_title_icons_in_tabs">Enable icons</string>
+    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
 
     <string name="pref_title_airspeck_app_access">AirSpeck 访问</string>
     <string name="pref_description_airspeck_app_access">启用 AirSpeck 应用</string>
@@ -91,7 +122,7 @@
     <string name="pref_description_respeck_app_access">启用 RESpeck 应用</string>
 
 
-    <!-- Example vec_settings for Data & Sync -->
+    <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">数据与同步</string>
 
     <string name="pref_title_sync_frequency">同步频率</string>
