--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,24 @@
     <string name="readings_title">Live Data</string>
 
     <!-- Readings -->
-    <string name="reading_respiratory_rate">RESPIRATORY RATE</string>
+    <string name="reading_respiratory_rate">Respiratory Rate</string>
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
+
+    <string name="reading_pm1_0">PM 1.0</string>
+    <string name="reading_temp">Temperature</string>
+    <string name="reading_rel_humidity"> Humidity</string>
+    <string name="reading_o3">O3</string>
+    <string name="reading_no2">NO2</string>
+    <string name="reading_bins">Bins</string>
 
     <!-- Reading units -->
     <string name="reading_unit_bpm">bpm</string>
     <string name="reading_unit_ug_m3">µg/m³</string>
+    <string name="reading_unit_c" translatable="false">°C</string>
+    <string name="reading_unit_f" translatable="false">°F</string>
+    <string name="reading_unit_percent" translatable="false">%</string>
+
 
 
     <!-- Strings related to Menus -->
@@ -20,7 +31,7 @@
     <!-- Button/tabs menu -->
     <string name="menu_home">HOME</string>
     <string name="menu_health">HEALTH</string>
-    <string name="menu_air">AIR</string>
+    <string name="menu_air_quality">AIR QUALITY</string>
     <string name="menu_dashboard">DASHBOARD</string>
     <string name="menu_settings">SETTINGS</string>
 
@@ -30,10 +41,15 @@
     <string name="action_settings">Settings</string>
 
 
+    <!-- Strings related to AirSpeck and RESpeck apps -->
+    <string name="airspeck_not_found">AirSpeck app not found</string>
+    <string name="respeck_not_found">RESpeck app not found</string>
+
+
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Personal Data vec_settings -->
+    <!-- Personal Data settings -->
     <string name="pref_header_personal_data">Personal data</string>
 
     <string name="pref_title_display_name">Name</string>
@@ -69,21 +85,44 @@
     </string-array>
 
 
-    <!-- Example vec_settings for User Interface -->
+    <!-- Example settings for User Interface -->
     <string name="pref_header_ui">User interface</string>
 
-    <string name="pref_title_main_screen_readings_display_mode">Readings Display Mode</string>
-    <string-array name="pref_home_screen_readings_display_mode_list">
-        <item>List</item>
-        <item>Cyclic</item>
+    <string name="pref_category_ui_general">General</string>
+
+    <string name="pref_title_font_size">Font Size</string>
+    <string-array name="pref_font_size_list">
+        <item>Small</item>
+        <item>Normal</item>
+        <item>Large</item>
+        <item>Huge</item>
     </string-array>
-    <string-array name="pref_home_screen_readings_display_mode_list_values">
+    <string-array name="pref_font_size_list_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string name="pref_category_ui_readings">Readings</string>
+
+    <string name="pref_title_readings_display_mode">Readings Display Mode</string>
+    <string-array name="pref_readings_display_mode_list">
+        <item>List</item>
+        <item>Graphical</item>
+    </string-array>
+    <string-array name="pref_readings_display_mode_list_values">
         <item>0</item>
         <item>1</item>
     </string-array>
 
+    <string name="pref_category_ui_advanced">Advanced</string>
+
     <string name="pref_title_main_menu_layout">Advanced main menu layout</string>
     <string name="pref_description_main_menu_layout">Choose between buttons and tabs</string>
+
+    <string name="pref_title_icons_in_tabs">Enable icons</string>
+    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
 
     <string name="pref_title_airspeck_app_access">AirSpeck access</string>
     <string name="pref_description_airspeck_app_access">Enable AirSpeck App</string>
@@ -91,7 +130,8 @@
     <string name="pref_title_respeck_app_access">RESpeck access</string>
     <string name="pref_description_respeck_app_access">Enable RESpeck App</string>
 
-    <!-- Example vec_settings for Data & Sync -->
+
+    <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
