--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -6,6 +6,8 @@
     <string name="readings_title">सजीव आंकड़ा</string>
 
     <!-- Readings -->
+    <string name="reading_no_data">No data available</string>
+
     <string name="reading_respiratory_rate">श्वसन दर</string>
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
@@ -17,7 +19,7 @@
     <string name="reading_no2">NO2</string>
     <string name="reading_bins">Bins</string>
 
-    <!-- Reading units -->
+    <!-- Reading unit -->
     <string name="reading_unit_bpm">bpm</string>
     <string name="reading_unit_ug_m3">µg/m³</string>
 
@@ -28,7 +30,7 @@
     <string name="menu_home">घर</string>
     <string name="menu_health">स्वास्थ्य</string>
     <string name="menu_air_quality">हवा की गुणवत्ता</string>
-    <string name="menu_dashboard">डैशबोर्ड</string>
+    <string name="menu_graphs">रेखांकन</string>
     <string name="menu_settings">सेटिंग्स</string>
 
     <!-- Action Bar menu -->
@@ -103,15 +105,17 @@
     <string name="pref_title_readings_display_mode">रीडिंग प्रदर्शन मोड</string>
     <string-array name="pref_readings_display_mode_list">
         <item>सूची</item>
-        <item>चित्रात्मक</item>
+        <item>ग्राफिक: बार</item>
+        <item>ग्राफिक: चाप</item>
     </string-array>
     <string-array name="pref_readings_display_mode_list_values">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
     <string name="pref_title_main_menu_layout">उन्नत मुख्य मेनू लेआउट</string>
-    <string name="pref_description_main_menu_layout">बटन और टैब के बीच चुनें</string>
+    <string name="pref_description_main_menu_layout">टैब मेनू सक्षम</string>
 
     <string name="pref_title_icons_in_tabs">Enable icons</string>
     <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
@@ -143,5 +147,11 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
+    <string name="pref_category_ui_advanced">उन्नत</string>
+    <string name="pref_category_ui_readings">हवा की गुणवत्ता रीडिंग</string>
 
+
+    <!-- Strings related to SegmentedBar -->
+    <string name="sb_empty">खाली</string>
+    <string name="sb_value_segment">वर्तमान मूल्य</string>
 </resources>
