--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,6 @@
     <string name="new_user_title">Detalles del usuario</string>
     <string name="new_user_register">Registrar</string>
     <string name="new_user_empty_fields">Debe completar todos los campos</string>
-    <string name="no_network">Sin conexión a Internet</string>
 
     <string name="new_user_first_name">Nombre</string>
     <string name="new_user_last_name">Apellido</string>
@@ -31,6 +30,23 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+
+    <!-- Strings related to login issues -->
+    <string name="no_network">Sin conexión a Internet</string>
+    <string name="network_required">Se requiere de conexión a Internet para configurar el usuario</string>
+    <string name="loading_data">Cargando datos de usuario</string>
+
+
+    <!-- Strings related to User Profile -->
+    <string name="title_activity_user_profile">Perfil del usuario</string>
+    <string name="user_profile_name">Nombre:</string>
+    <string name="user_profile_birth_date">Fecha de nacimiento:</string>
+    <string name="user_profile_gender">Género:</string>
+    <string name="user_profile_user_type">Tipo de usuario:</string>
+    <string name="user_profile_illiterate">Analfabeto:</string>
+    <string name="user_profile_yes">Sí</string>
+    <string name="user_profile_no">No</string>
 
 
     <!-- Strings related to SegmentedBar -->
