--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -89,6 +89,7 @@
     <string name="action_re_speck">RESpeck</string>
     <string name="action_settings">सेटिंग्स</string>
     <string name="action_user_profile">प्रोफाइल</string>
+    <string name="action_connect">जुडिये</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
