--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -89,6 +89,7 @@
     <string name="action_re_speck">RESpeck</string>
     <string name="action_settings">设置</string>
     <string name="action_user_profile">轮廓</string>
+    <string name="action_connect">接</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
