Graphs fragment refactored. Added 2 graphs: PMs (PM1, PM2.5, PM10), and Bins (0 - 15). Some refactoring in AQ fragment and Main activity.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,11 +69,15 @@
     <string name="reading_rel_humidity">Humedad</string>
     <string name="reading_o3">O3</string>
     <string name="reading_no2">NO2</string>
-    <string name="reading_bins">Bins</string>
+    <string name="reading_bins">Bins total</string>
 
     <!-- Reading unit -->
     <string name="reading_unit_bpm">resp/min</string>
     <string name="reading_unit_ug_m3">µg/m³</string>
+
+    <!-- Graphs -->
+    <string name="graphs_pms_title">PM 1, PM 2.5, PM 10</string>
+    <string name="graphs_bins_title">Bins: 0 – 15</string>
 
 
     <!-- Strings related to Menus -->
