--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -36,6 +36,7 @@
     <string name="no_network">没有网络连接</string>
     <string name="network_required">需要设置用户的互联网连接</string>
     <string name="loading_data">需要设置用户的互联网连接</string>
+    <string name="connecting_to_devices">连接到设备</string>
 
 
     <!-- Strings related to User Profile -->
